2005-12-05  Patrick Lam  <plam@mit.edu>
	* src/fcname.c (FcNameGetObjectType):

	Don't assign types to user object names.

2005-12-05  Patrick Lam  <plam@mit.edu>
	* src/fcpat.c (FcValueDestroy, FcValueListDestroy, FcStrHashed):

	Don't free strings that have been returned from FcStrStaticName.

2005-12-01  Patrick Lam  <plam@mit.edu>
	* fc-cat/fc-cat.c (FcCacheGlobalFileReadAndPrint, main):

	Add codepath for reading global cache files as well.

2005-12-01  Behdad Esfahbod  <behdad@cs.toronto.edu>
	reviewed by: plam

	* conf.d/10-fonts.persian.conf:
	* conf.d/Makefile.am:

	Add config file for Persian fonts from Sharif FarsiWeb, Inc.

2005-11-30  Behdad Esfahbod  <behdad@cs.toronto.edu>
	reviewed by: plam

	* src/fcxml.c (FcConfigParseAndLoad):

	Only add a config file to the set of config files once.

2005-11-29  Patrick Lam  <plam@mit.edu>
	* src/fcint.h (FcCacheBankToIndex);

	Fix segfault by guarding array dereference.

2005-11-29  Dirk Mueller  <dmueller@suse.de>
	reviewed by: plam
	
	* fc-lang/fc-lang.c:
	* src/fccache.c (FcDirCacheConsume, FcCacheHaveBank,
			 FcCacheBankToIndex, FcCacheBankToIndexMTF,
			 FcCacheAddBankDir):
	* src/fcint.h:

	Refactor FcCacheBankToIndex into an inlineable part
	(in fcint.h) which checks the front of the list and a
	non-inlineable part which finds and moves the appropriate element
	to the front of the list.

2005-11-29  Patrick Lam  <plam@mit.edu>
	* src/fccfg.c (FcConfigBuildFonts):
	* src/fccache.c (FcCacheReadDirs):

	Make the perf guys hate me a bit less: hoist the directory-name
	FcConfigAcceptFont check for cached fonts up to directory cache
	read time, rather than running it for each font.

2005-11-29  Patrick Lam  <plam@mit.edu>
	* src/fccfg.c (FcConfigBuildFonts):
	* src/fcint.h:
	* src/fcpat.c (FcPatternFindFullFname):

	Don't make FcPatternFindFullFname available to fccfg, it's not
	really safe.  Instead go through FcPatternGetString (sorry,
	perf guys.)  Also, use globs for dirs as well.
